welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: value update is not a member of java.awt.Color
if (getCouleurSol()=Color.green) {
    ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	return avance();
                     ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
	return recule(); gauche();
                     ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
	return recule(); gauche();
                               ^