welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
if (getCouleurSol()=Color.green) {
	return avance();
} else {
	return recule(); gauche();
}
}        
